--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,4 +1,5 @@
 $blue: #3765c2;
+$gold: #7e6e1c;
 $bodyFont: 'Montserrat', sans-serif;
 
 .movie-card {
@@ -8,9 +9,20 @@ $bodyFont: 'Montserrat', sans-serif;
 
 .movie-text {
 	color: $blue;
+	font-weight: 500;
+}
+
+.movie-card-title {
+	color: $gold;
+	font-weight: 700;
 }
 
 .movie-card-button {
 	background-color: $blue;
+	color: white;
+}
+
+.movie-card-button:hover {
+	background-color: $gold;
 	color: white;
 }
