--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -30,7 +30,8 @@ $bodyFont: 'Montserrat', sans-serif;
 	background-color: $gold;
 	border: none;
 	display: block;
-	margin-left: auto;
+	// margin-left: auto;
+	margin: auto;
 	transition: 0.4s;
 }
 
