--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -8,7 +8,7 @@ $bodyFont: 'Montserrat', sans-serif;
 
 .navbar {
 	background-color: white;
-	color: red;
+	display: flex;
 }
 
 h1 {
@@ -17,18 +17,15 @@ h1 {
 	font-size: 24px;
 }
 
-.main-nav-button-container {
-	margin-right: 5px;
-}
-
-.main-nav-button {
+.link-text {
 	background-color: $blue;
-	border: none;
-	display: block;
-	margin: 10px 10px 10px auto;
+	color: white;
+	border-radius: .25rem;
 	transition: 0.4s;
+	margin: 5px;
 }
 
-.main-nav-button:hover {
+.link-text:hover {
 	background-color: $gold;
+	color: white;
 }
