Updated put and post axios methods

--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -20,7 +20,7 @@ h1 {
 .link-text {
 	background-color: $blue;
 	color: white;
-	border-radius: .25rem;
+	border-radius: 0.25rem;
 	transition: 0.4s;
 	margin: 5px;
 }
